[B] Fix overflow property for sidebar

--- a/_assets/sass/components/documentation/_docs-sidebar.scss
+++ b/_assets/sass/components/documentation/_docs-sidebar.scss
@@ -116,7 +116,7 @@
   .menu-wrapper {
     position: relative;
     max-height: 100%;
-    overflow: scroll;
+    overflow: auto;
   }
 
   ul {
